# OpsPulse

./: .env.example  .gitignore  .opspulse.yaml  ARCHITECTURE_V2.md  CHANGELOG.md  CLI_GLUE_LAYER.md  CLI_USAGE.md  CONFIG_WORKFLOW_DESIGN.md  CONTRIBUTING.md  CROSS_PROJECT_ANALYSIS.md  FINAL_DESIGN.md  FINAL_REVIEW_REPORT.md  IMPROVEMENT_REPORT.md  LICENSE  OLD_VS_NEW.md  PRODUCT_PLAN.md  README.md  REDESIGN.md  SECOND_REVIEW_REPORT.md  WORKFLOW_TEMPLATE_SYSTEM.md  comprehensive_review.md  opspulse.yaml  p0_improvement_report.md  review_report.md  tech_improvement_report.md
doc/: KPI.md  (+11 more)
mcp-server/: README.md  pyproject.toml
mcp-server/src/opspulse_mcp/: __init__.py  cli.py  cli_backup.py  config.py  server.py  workflow.py
mcp-server/src/opspulse_mcp/github/: client.py
mcp-server/src/opspulse_mcp/models/: __init__.py  issue_spec.py
mcp-server/src/opspulse_mcp/parsers/: __init__.py  frontmatter.py  label_mapper.py  validation.py
mcp-server/src/opspulse_mcp/pipeline/: github_actions.py
mcp-server/src/opspulse_mcp/project/: __init__.py  scanner.py
mcp-server/src/opspulse_mcp/templates/: __init__.py  builtin.yaml
mcp-server/src/opspulse_mcp/tools/: __init__.py  init_repo.py  ops_breakdown.py  ops_code_agent.py  ops_create_pr.py  ops_deploy.py  ops_design.py  ops_review.py  ops_smoke_test.py  parse_issue.py  trigger_pipeline.py  update_issue_status.py
mcp-server/tests/: __init__.py  test_github_actions.py  test_parse_issue.py  test_scanner.py  test_templates.py  test_trigger_github.py  test_trigger_pipeline.py  test_update_issue_status.py  test_workflow.py
(+51 files in other folders)
