[project]
name = "opspulse-mcp"
version = "0.1.0"
description = "OpsPulse MCP server — parse_issue, trigger_pipeline, update_issue_status"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
opspulse-mcp = "opspulse_mcp.server:main"
opspulse = "opspulse_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspulse_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
